chore(kayenta): Kayenta building with google cloud monitoring vs. google apis